<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="@string/hint_first_name"
        android:inputType="textPersonName"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="16dp"/>

    <EditText
        android:id="@+id/etLastName"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="@string/hint_last_name"
        android:inputType="textPersonName"

        app:layout_constraintTop_toBottomOf="@id/etFirstName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"/>

    <EditText
        android:id="@+id/etAge"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="@string/hint_age"
        android:inputType="number"

        app:layout_constraintTop_toBottomOf="@id/etLastName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"/>

    <EditText
        android:id="@+id/etSalary"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="@string/hint_salary"
        android:inputType="numberDecimal"

        app:layout_constraintTop_toBottomOf="@id/etAge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"/>

    <Button
        android:id="@+id/btnGoToSecond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_button_to"
        app:layout_constraintTop_toBottomOf="@id/etSalary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>